# kill_microsoft

./: Cargo.toml
resources/: icon.icns
src/: main.rs
