[package]
name        = "kill_word"
version     = "0.1.0"
authors     = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition     = "2018"
description = "Kills Microsoft Word to let the laptop shutdown"

[dependencies]
regex       = "1.3.9"
lazy_static = "1.4.0"

# Make it an Os X bundle for easy distribution with `cargo bundle`.
# 
# 1. bundling requires that `cargo-bundle` be installed.
# 2. packaging is simply done through the command `cargo bundle --release`.
[package.metadata.bundle]
name       = "Kill Word"
identifier = "xgi.perso.kill_word"
resources  = [ "resources" ]
icon       = [ "resources/icon.icns" ]